--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,21 @@
 <app-header></app-header>
+
+<div class="m-4">
+    <h4 class="m-0">INDIAN STATES</h4>
+    <ul class="p-0 ps-2">
+        <li>Andhra Pradesh</li>
+        <li>Arunachal Pradesh</li>
+        <li>Bihar</li>
+        <li>Chhatisgarh</li>
+        <li>Daman Diu</li>
+        <li>Gujarat</li>
+        <li>Haryana</li>
+        <li>Jharkhand</li>
+        <li>Karnataka</li>
+        <li>Lakshdweep</li>
+        <li>Manipur</li>
+        <li>Nagaland</li>
+        <li>Orissa</li>
+        <li>Punjab</li>
+    </ul>
+</div>
